# spidy

./: README.md  pyproject.toml
src/mcp_server_spidy/: server.py
