[project]
name = "mcp-server-spidy"
version = "0.1.0"
description = "a web cralwer for claude mcp"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [ "mcp>=1.1.1",]
[[project.authors]]
name = "Jose Roberts"
email = "webterpr@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
mcp-server-spidy = "mcp_server_spidy:main"
